Moved everything out of the others directory